# BitcoinNodeWallet-CargoSOS

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
TpBitcoin/: Cargo.toml
bitcoin/src/: estructuras_bloque.rs  lib.rs
settings_implementation/src/: ibd_methods.rs  lib.rs  main.rs  p2p_protocol.rs  settings.rs
src/: bin - Acceso directo.lnk  lib.rs  main.rs  p2p_protocol.rs
src/block_structure/: block.rs  block_chain.rs  block_header.rs  block_version.rs  coinbase_transaction.rs  compact256.rs  error_block.rs  hash.rs  merkle_tree.rs  mod.rs  node_chain.rs  outpoint.rs  transaction.rs  transaction_coinbase.rs  transaction_coinbase_input.rs  transaction_input.rs  transaction_output.rs  utxo_set.rs
src/concurrency/: error_concurrency.rs  listener.rs  mod.rs  stop.rs  thread_pool.rs  work.rs
src/configurations/: client_config.rs  config.rs  configuration.rs  connection_config.rs  deserializable.rs  deserializable_structure.rs  download_config.rs  error_configuration.rs  estructura_deserializable.rs  interface.rs  log_config.rs  mod.rs  mode_config.rs  parsable.rs  parse_error.rs  save_config.rs  server_config.rs  settings.rs  try_default.rs  ui_config.rs
src/connections/: connection_error.rs  dns_seeder.rs  error_connection.rs  ibd_methods.rs  initial_download_method.rs  mod.rs  network_ip_addres.rs  network_ip_address.rs  p2p_protocol.rs  socket_conversion.rs  suppored_services.rs  type_identifier.rs
src/errors/: mod.rs  parse_error.rs
src/logs/: error_log.rs  level.rs  logger.rs  logger_receiver.rs  mod.rs  (+1 more)
tests/: test_integration.rs
(+93 files in other folders)
