[package]
name = "cargosos_bitcoin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "bitcoin"
src = "bitcoin/main.rs"

[dependencies]
chrono = "0.4.24"
bitcoin_hashes = "0.12.0"
k256 = "0.13.1"
bs58 = "0.5.0"